--- a/cc_15.html
+++ b/cc_15.html
@@ -17,6 +17,7 @@
     <header>
         <h1>Risk Management Dashboard</h1>
         <div id="riskDashboard"></div>
+        <div class="risk-card" id="riskItem"></div>
     </header>
     <main>
         <button id="addRisk">Add New Ticket</button>
