--- a/cc_15.html
+++ b/cc_15.html
@@ -10,6 +10,17 @@
             margin:20 px;
             padding: 20px;
         }
+        .risk-card{
+            padding: 10px;
+            margin:10px;
+            background-color: aqua;
+            border-radius: 5px;
+            display: inline-block;
+        }
+        .risk-item{
+            cursor: pointer;
+            color: blueviolet;
+        }
 
     </style>
 </head>
