Task 3 - Removing Risk Items.

--- a/cc_15.html
+++ b/cc_15.html
@@ -33,6 +33,8 @@
     <main>
         <button id="addRisk">Add New Ticket</button>
         <div id="riskContainer"></div>
+        <h2>Risk Ticket</h2>
+        <div id="risk-card">Risk1</div>
     </main>
     <footer>
         <p>Risks&More &copy; 2025</p>
