--- a/cc_15.html
+++ b/cc_15.html
@@ -21,6 +21,9 @@
             cursor: pointer;
             color: blueviolet;
         }
+        .high-prioriy{
+            background-color: crimson;
+        }
 
     </style>
 </head>
