--- a/cc_15.html
+++ b/cc_15.html
@@ -24,6 +24,12 @@
         .high-prioriy{
             background-color: crimson;
         }
+        .low-priority{
+            background-color: green;
+        }
+        .med-priority{
+            background-color: yellow;
+        }
 
     </style>
 </head>
